ubuntu_etc/iptables/rules.v4
# Generated by iptables-save v1.8.7 on Tue Aug  1 20:24:35 2023
*mangle
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:mt_rtr_4_m_rtr - [0:0]
-A FORWARD -j mt_rtr_4_m_rtr
-A mt_rtr_4_m_rtr -o ppp0 -p tcp -m tcp --tcp-flags SYN,RST SYN -j TCPMSS --clamp-mss-to-pmtu
-A mt_rtr_4_m_rtr -m state --state RELATED,ESTABLISHED -j ACCEPT
-A mt_rtr_4_m_rtr -m conntrack --ctstate INVALID -j DROP
-A mt_rtr_4_m_rtr -p tcp -m tcp ! --tcp-flags FIN,SYN,RST,ACK SYN -m state --state NEW -j DROP
-A mt_rtr_4_m_rtr -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG FIN,SYN,RST,PSH,ACK,URG -j DROP
-A mt_rtr_4_m_rtr -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG NONE -j DROP
-A mt_rtr_4_m_rtr -i br_lan -o ppp0 -j ACCEPT
-A mt_rtr_4_m_rtr -i br_lan -o enp5s0 -j ACCEPT
COMMIT
# Completed on Tue Aug  1 20:24:35 2023
# Generated by iptables-save v1.8.7 on Tue Aug  1 20:24:35 2023
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -i ppp0 -p tcp -m tcp --dport 65501 -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -i ppp0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i ppp0 -j DROP
COMMIT
# Completed on Tue Aug  1 20:24:35 2023
# Generated by iptables-save v1.8.7 on Tue Aug  1 20:24:35 2023
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:mt_rtr_4_n_rtr - [0:0]
-A POSTROUTING -j mt_rtr_4_n_rtr
-A mt_rtr_4_n_rtr -o ppp0 -j MASQUERADE
-A mt_rtr_4_n_rtr -o enp5s0 -j MASQUERADE
COMMIT
# Completed on Tue Aug  1 20:24:35 2023
